added social profile in footer section

--- a/style.css
+++ b/style.css
@@ -174,3 +174,27 @@ footer{
     font-size: 12px;
     text-align: center;
 }
+
+.profile-link-fb{
+    text-decoration: none;
+    color: white;
+    border-radius: 7px;
+    background-color: royalblue;
+    padding: 10px 20px;
+}
+
+.profile-link-git{
+    text-decoration: none;
+    color: white;
+    border-radius: 7px;
+    background-color: gray;
+    padding: 10px 20px;
+}
+
+.profile-link-tw{
+    text-decoration: none;
+    color: white;
+    border-radius: 7px;
+    background-color: dodgerblue;
+    padding: 10px 20px;
+}
